[edit]: style of mine

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,4 +5,9 @@
 body{
   background-color: $primaryColor;
   font-family: $mainFont;
+
+  main{
+    background-color: white;
+    padding: 50px;
+  }
 }
