--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,5 +9,14 @@ body{
   main{
     background-color: white;
     padding: 50px;
+    margin: 50px 0;
+
+    .counterCard{
+      h4{
+      width: 100%;
+      background-color: black;
+      margin-bottom: 0;
+    }
+   }
   }
 }
