--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,9 +12,11 @@ body{
     margin: 50px 0;
 
     .counterCard{
-      h4{
+      .finder{
       width: 100%;
       background-color: black;
+      color: white;
+      padding: 10px;
       margin-bottom: 0;
     }
    }
