[restyling]: main.scss

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,7 +11,7 @@ body{
     padding: 50px;
     margin: 50px 0;
 
-    .counterCard{
+    .sectionCard{
       .finder{
       width: 100%;
       background-color: black;
